[gd_scene load_steps=5 format=3 uid="uid://bxireqj4bo3t7"]

[ext_resource type="Script" path="res://scenes/UI/win_ui.gd" id="1_18lts"]
[ext_resource type="Theme" path="res://ui_theme.tres" id="2_utex6"]
[ext_resource type="FontFile" uid="uid://b8eif6kg2ita4" path="res://ui/fonts/AGoblinAppears-o2aV.ttf" id="3_3h4n4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njkqv"]
bg_color = Color(0.25098, 0.223529, 0.184314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.780392, 0.611765, 0.337255, 1)
anti_aliasing = false

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18lts")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_njkqv")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_utex6")
theme_override_colors/font_color = Color(1, 0.945098, 0.823529, 1)
theme_override_fonts/font = ExtResource("3_3h4n4")
theme_override_font_sizes/font_size = 7
text = "Thanks for playing! "
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ToMainMenu" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_utex6")
theme_override_font_sizes/font_size = 7
text = "Main Menu"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_utex6")
theme_override_font_sizes/font_size = 7
text = "Quit"
flat = true

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/ToMainMenu" to="." method="_on_to_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
